# qa_guru_5_21

./: .gitignore  pyproject.toml
resources/catfact/: catfact_breeds_schema.json  catfact_facts_schema.json
resources/reqres_in/: list_users_schema.json
tests/: conftest.py
tests/catfact/breeds/: test_catfact_breeds.py
tests/catfact/fact/: test_catfact_fact_max_length.py
tests/catfact/facts/: test_catfact_facts_limit.py
tests/reqres_in/create_user/: test_create_user.py
tests/reqres_in/list_unknown_resource/: test_list_unknown_resource.py
tests/reqres_in/list_users/: test_list_users.py
tests/reqres_in/single_user/: test_single_user.py
tests/reqres_in/single_user_not_found/: test_single_user_not_found.py
utils/: attach.py
